# handbook_gen

./: .gitattributes  .gitignore  LICENSE  README.md  directory_structure.txt  note cres app master plan.html  pyproject.toml
backend/: cleanup_manager.py  config.py  crew.py  directory_structure.txt  logger.py  main.py  main.txt  staging_manager.py
backend/database/: db_handler.py  webinar_notes.db
backend/processors/: audio_transcript_Key_points.py  ocr_tool.py  ocr_tool.txt  whisper_tool.py  you_tube_transcription.py  you_tube_transcription.txt
backend/services/: handbook.py  handbook.txt  merge_tool.py  merge_tool.txt  task_manager.py
backend/src/note_crew/config/: agents.yaml  tasks.yaml
backend/utils/: file_utils.py  utils.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Footer.js  Header.js
frontend/src/pages/: Home.js  Process.js  Results.js
note cres app master plan_files/: 1840-8e83f2334a3528eb.js.download  3676-5965dd3f52d459c3.js.download  3688-9dd98e679cdd531b.js.download  4145-3ad3ba5b0c62de34.js.download  4592-03f72ae09815ede3.js.download  6362-89eff2d3e1b71b17.js.download  6807-0a44e8c4e04b6ab1.js.download  9367-6533da43a60d198c.js.download  anchor.html  e6fb89e3e5f4ac48.css  enterprise.js.download  global-error-46d8fd1a7dcd7c8d.js.download  lupk8zyo  saved_resource(1).html  saved_resource.html  webpack-38a377619b7cf52e.js.download
tests/: check_cuda.py  test_processors.py  test_services.py  test_utils.py  torch_check.py
